--- a/src/index.css
+++ b/src/index.css
@@ -46,6 +46,8 @@
 
 html {
   scroll-behavior: initial !important;
+  overflow-x: hidden;
+  width: 100%;
 }
 
 html.lenis,
